admission/ValidatingAdmissionPolicy/policies/istio-authorizationpolicy/test.yaml
# RequiresCRD: authorizationpolicies.security.istio.io
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: violating-istio-authorizationpolicy-allow-all
spec:
  action: ALLOW
  rules:
  - {}
